calculator-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: calculator-service
spec:
  type: LoadBalancer
  selector:
    app: calculator
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
      nodePort: 31110
